--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,5 +1,6 @@
 <ion-view>
-  <ion-content>
-    asd
+  <ion-content style="background-color: #00BCD4;">
+    <button class="button button-icon ion-navicon" style="font-size: 25px; margin-left: 5px;" menu-toggle="left">
+    </button>
   </ion-content>
 </ion-view>
