--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,15 @@
 /* Empty. Add your own CSS if you like */
+
+.avatar{
+  border-radius: 50%;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  width: 130px;
+  border: solid 2px #95a3d6;
+  margin-top: 20px;
+}
+.item-menu{
+  background-color: #B2EBF2;
+  border: 0;
+  box-shadow: none;
+}
