--- a/public/templates/menu.html
+++ b/public/templates/menu.html
@@ -1,36 +1,38 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
-
-      <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
-        </button>
-      </ion-nav-buttons>
-    </ion-nav-bar>
     <ion-nav-view name="content"></ion-nav-view>
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
-    </ion-header-bar>
-    <ion-content>
-      <ion-list>
-        <ion-item menu-close ng-click="login()">
-          Login
-        </ion-item>
-        <ion-item menu-close href="#/app/search">
-          Search
-        </ion-item>
-        <ion-item menu-close href="#/app/browse">
-          Browse
-        </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Playlists
-        </ion-item>
-      </ion-list>
+    <ion-content style="background-color: #536DFE;">
+      <div style="text-align: center; width: 100%;">
+        <img class="avatar" ng-src="{{user.photo}}" />
+      </div>
+      <div style="text-align: center;">
+        <img id="star" src="../img/star.png" style="max-width: 25px;"/>
+      </div>
+      <div class="list card" style="border: 0; box-shadow: none;">
+        <a href="#" class="item item-icon-left item-menu">
+          <i class="icon ion-ios-game-controller-a"></i>
+          {{user.name}}
+        </a>
+
+        <a href="#" class="item item-icon-left item-menu">
+          <i class="icon ion-ios-telephone"></i>
+          Enter phone number
+        </a>
+
+        <a href="#" class="item item-icon-left item-menu">
+          <i class="icon ion-wifi"></i>
+          Enter wireless password
+        </a>
+
+        <a href="#" class="item item-icon-left item-menu">
+          <i class="icon ion-card"></i>
+          Enter card information
+        </a>
+
+      </div>
     </ion-content>
   </ion-side-menu>
 </ion-side-menus>
