--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,8 +1,10 @@
 <ion-view>
   <ion-content scroll="false" style="background-color: white; height: 100%; width: 100%;">
-    <div style="margin: 15px; height: 65%; width: 100%;"></div>
+    <div style="height: 65%; width: 100%;">
+      <img src="../img/logo-filo.jpg" class="animated fadeIn" style="width: 100%;"/>
+    </div>
     <div style="width: 100%; text-align: center">
-      <button class="button icon-left ion-social-googleplus-outline button-positive" ng-click="login()">Iniciar sesión con google</button>
+      <button class="button icon-left ion-social-googleplus-outline button-positive animated bounce" ng-click="login()">Iniciar sesión con google</button>
     <div>
   </ion-content>
 </ion-view>
