--- a/public/templates/menu.html
+++ b/public/templates/menu.html
@@ -9,7 +9,7 @@
         <img class="avatar" ng-src="{{user.photo}}" />
       </div>
       <div style="text-align: center;">
-        <img id="star" src="../img/star.png" style="max-width: 25px;"/>
+        <h3 style="font-weight: 400; color: aliceblue;"><img class="animated infinite flip" src="../img/star-mario.png" style="max-width: 17px;"/>  0 Pts.</h3>
       </div>
       <div class="list card" style="border: 0; box-shadow: none;">
         <a href="#" class="item item-icon-left item-menu">
